* pw - fixed to work with current web page (can't remember who fixed it)
* gtwhois - Post url changed, modified search accordingly (Dean Wilson)
* tvg - Default url broken, modified search accordingly (Shawn K. Hall)
* viam - Changed to fit site changes
* sd - changed for a correct example
* smlnk - Updated to take advantage of new server features (Shawn K. Hall)

Removed Searches

* webpoll - discontinued (Dean Wilson)
* jsexec - renamed to jsx

Miscellaneous

* added a couple 'button' style graphics (30x100) for promoting DQSD on websites (Shawn K. Hall)
* added a logo-size graphic (dqsd.gif) for use with the new banner feature (Shawn K. Hall)
* added several more bit-depth and size formats to the dqsd search.ico icon file (Shawn K. Hall)

-- What's new for 3.1.6.0 (20-Apr-2003)

Enhancements

* Moved txp search to computers->reference subcategory.  Added a usage example.
* Added windowOpenFeatures that can be set in local preferences to further customize the search windows that open up (from anonymous poster via Brent Beardsley)
* Performance improvement to calendar (Will Dean)
* Performance improvement to inline style generation (used by calendar and message boxes) (Will Dean)
* added edit local stylesheet menu option and a new variable to set for the css editor called cssEditorExe so you can use TopStyle, Dreamweaver, etc (from Brent Beardsley)
* added Belgian National Holidays (from Joris Verhuyck)
* Modified the US holidays file for 2003
* created an empty localsearches folder
* added swedish strings to strings.js
* Ctrl-Del to clear the history

New Searches

* abt - Search About.com
* alistapart - Search the A List Apart site (from Sarah S.)
* bio - Search the Biography.com database (from viking mel)
* blb - Search the bible at BlueLetterBible.org (from Brent Beardsley)
* bta - Search Betanews for new beta software (from Paul Hounshell)
* ccase - new function to convert case of a string - lower, upper, caps. (from Sarah Sweeney)